# DS_StreamScribe

./: .gitignore  README.md  Text Summarization.py  app.py  pyproject.toml  test_setup.py
