[tool.poetry]
name = "streamscribe"
version = "0.1.0"
description = "A Streamlit app for video transcription and analysis"
authors = ["shahar tasa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
numpy = "^2.1.3"
pandas = "^2.2.3"

torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.10.0+cu116-cp38-cp38-win_amd64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu116/torchaudio-0.10.0+cu116-cp38-cp38-win_amd64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
