[tool.poetry]
name = "ds-streamscribe"
version = "0.1.0"
description = ""
authors = ["GaliS22 <galib22p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
ffmpeg = "^1.4"
streamlit = "^1.39.0"
nltk = "^3.9.1"
llvmlite = ">=0.37.0"
numba = "^0.60.0"
openai-whisper = "^20240930"
pydantic = "^2.9.2"
transformers = "^4.46.1"
pydub = "^0.25.1"
langchain-core = "^0.3.15"
langchain-groq = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
