[tool.poetry]
name = "ds-streamscribe"
version = "0.1.0"
description = ""
authors = ["GaliS22 <galib22p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-groq = "^0.2.1"
streamlit = "^1.40.0"
transformers = "^4.46.2"
langchain-core = "^0.3.15"
pydantic = "^2.9.2"
whisper = "^1.1.10"
moviepy = "^1.0.3"
nltk = "^3.9.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
